--- a/garage.html
+++ b/garage.html
@@ -16,6 +16,15 @@
 <meta name="twitter:card" content="summary_large_image" />
 
 <link rel="apple-touch-icon" sizes="180x180 href="https://house-mate.com.au/assets/images/webp/apple-touch-icon-180x180.webp">
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M9GNZRF');</script>
+<!-- End Google Tag Manager -->
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9G1LWQKVL0"></script>
 <script>
@@ -59,11 +68,15 @@
   
 </head>
 <body>
-  <section class="menu cid-sIRo2EyVvY" once="menu" id="menu2-5t">
 
-    
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M9GNZRF"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+<section class="menu cid-sIRo2EyVvY" once="menu" id="menu2-5t">
+
+<nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
