--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 <link rel="apple-touch-icon" sizes="180x180 href="https://house-mate.com.au/assets/images/webp/apple-touch-icon-180x180.webp">
 <link rel="apple-touch-icon" href="https://house-mate.com.au/assets/images/webp/apple-touch-icon.webp">
 
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M9GNZRF');</script>
+<!-- End Google Tag Manager -->
+
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9G1LWQKVL0"></script>
@@ -70,6 +78,11 @@
 
 
 <body>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M9GNZRF"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v13.0" nonce="KNXgzzJf"></script>
