--- a/irrigation.html
+++ b/irrigation.html
@@ -16,6 +16,15 @@
 <meta name="twitter:card" content="summary_large_image" />
 
 <link rel="apple-touch-icon" sizes="180x180 href="https://house-mate.com.au/assets/images/webp/apple-touch-icon-180x180.webp">
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M9GNZRF');</script>
+<!-- End Google Tag Manager -->
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9G1LWQKVL0"></script>
 <script>
@@ -129,6 +138,11 @@
 </script>
 
 <body>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M9GNZRF"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <section class="menu cid-spYRjdU3xB" once="menu" id="menu2-2m">
 
     
