--- a/index.html
+++ b/index.html
@@ -73,8 +73,40 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   
 </head>
-
-
+<script type="application/ld+json">
+{
+	"@context": "https://schema.org",
+	"@type": "FAQPage",
+	"mainEntity": [{
+		"@type": "Question",
+		"name": "✅ What networking is required for home automation to operate?",
+		"acceptedAnswer": {
+			"@type": "Answer",
+			"text": "Any late generation wifi router is sufficient. If you have areas of weak wifi consider repeaters. Remote support does require a port to be opened, some clients prefer to leave that port open, others prefer to open it when remote support is called upon.  The latter is more suited to technically inclined clients who know how to log onto their router and open/close ports."
+		}
+	}, {
+		"@type": "Question",
+		"name": "✅ What happens to home automation if the house is suddenly deprived of power?",
+		"acceptedAnswer": {
+			"@type": "Answer",
+			"text": "Products will not work when power unexpectedly drops.  When power is restored, all aspects of the system will automatically reinitialise themselves and become operational again (assuming your Wi-Fi router restores itself).  If you have any issues after experiencing a power outage, please contact our support desk."
+		}
+	}, {
+		"@type": "Question",
+		"name": "✅ Can I override home automation and control devices manually anytime?",
+		"acceptedAnswer": {
+			"@type": "Answer",
+			"text": "All existing light switches or power points in your house can be used as usual.  No need to replace them.  Televisions and door locks still operate as they would without HomeKit, as do TVs, air conditioners, remote controls, thermostats."
+		}
+	}, {
+		"@type": "Question",
+		"name": "✅ Do you need good wifi for home automation?",
+		"acceptedAnswer": {
+			"@type": "Answer",
+			"text": "Yes.  Any device (wall switches, TVs, etc) that depend on Wi-Fi connectivity will need a strong local Wi-Fi signal.  If you are having trouble or have some areas with poor Wi-Fi connectivity, we have IT technicians across the country that can visit your home and consult you directly re Wi-Fi solutions."
+		}
+	}]
+}
 
 
 <body>
