--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
 </head>
 <script type="application/ld+json">
+
+{
+    "@type": "BreadcrumbList",
+    "@id": "https://house-mate.com.au/#breadcrumb",
+    "itemListElement": [
+        {
+            "@type": "ListItem",
+            "position": 1,
+            "item": {
+                "@type": "WebPage",
+                "@id": "https://house-mate.com.au/",
+                "url": "https://house-mate.com.au/",
+                "name": "Home"
+            }
+        }
+    ]
+},
+
 {
 	"@context": "https://schema.org",
 	"@type": "FAQPage",
