--- a/index.html
+++ b/index.html
@@ -74,57 +74,108 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
 </head>
 <script type="application/ld+json">
+   [{
+   		"@context": "https://schema.org/",
+   		"@type": "WebPage",
+   		"name": "Voice Assistant",
+   		"speakable": {
+   			"@type": "SpeakableSpecification",
+   			"xPath": [
+   				"/html/head/title",
+   				"/html/head/meta[@name='description']/@content"
+   			]
+   		},
+   		"url": "https://house-mate.com.au/voice-assistant.html"
+   	},
 
 {
-    "@type": "BreadcrumbList",
-    "@id": "https://house-mate.com.au/#breadcrumb",
-    "itemListElement": [
-        {
-            "@type": "ListItem",
-            "position": 1,
-            "item": {
-                "@type": "WebPage",
-                "@id": "https://house-mate.com.au/",
-                "url": "https://house-mate.com.au/",
-                "name": "Home"
-            }
-        }
-    ]
-},
-
-{
-	"@context": "https://schema.org",
-	"@type": "FAQPage",
-	"mainEntity": [{
-		"@type": "Question",
-		"name": "✅ What networking is required for home automation to operate?",
-		"acceptedAnswer": {
-			"@type": "Answer",
-			"text": "Any late generation wifi router is sufficient. If you have areas of weak wifi consider repeaters. Remote support does require a port to be opened, some clients prefer to leave that port open, others prefer to open it when remote support is called upon.  The latter is more suited to technically inclined clients who know how to log onto their router and open/close ports."
-		}
-	}, {
-		"@type": "Question",
-		"name": "✅ What happens to home automation if the house is suddenly deprived of power?",
-		"acceptedAnswer": {
-			"@type": "Answer",
-			"text": "Products will not work when power unexpectedly drops.  When power is restored, all aspects of the system will automatically reinitialise themselves and become operational again (assuming your Wi-Fi router restores itself).  If you have any issues after experiencing a power outage, please contact our support desk."
-		}
-	}, {
-		"@type": "Question",
-		"name": "✅ Can I override home automation and control devices manually anytime?",
-		"acceptedAnswer": {
-			"@type": "Answer",
-			"text": "All existing light switches or power points in your house can be used as usual.  No need to replace them.  Televisions and door locks still operate as they would without HomeKit, as do TVs, air conditioners, remote controls, thermostats."
-		}
-	}, {
-		"@type": "Question",
-		"name": "✅ Do you need good wifi for home automation?",
-		"acceptedAnswer": {
-			"@type": "Answer",
-			"text": "Yes.  Any device (wall switches, TVs, etc) that depend on Wi-Fi connectivity will need a strong local Wi-Fi signal.  If you are having trouble or have some areas with poor Wi-Fi connectivity, we have IT technicians across the country that can visit your home and consult you directly re Wi-Fi solutions."
+	"@type": "BreadcrumbList",
+	"@id": "https://house-mate.com.au/#breadcrumb",
+	"itemListElement": [{
+		"@type": "ListItem",
+		"position": 1,
+		"item": {
+			"@type": "WebPage",
+			"@id": "https://house-mate.com.au/",
+			"url": "https://house-mate.com.au/",
+			"name": "Home"
 		}
 	}]
-}
+},
+
+ {
+      "@context": "https://schema.org",
+      "@type": "QAPage",
+      "mainEntity": {
+        "@type": "Question",
+        "name": "voice assistant",
+        "text": "I am really interested to operate my house by voice.  What are the best voice assistants?",
+        "answerCount": 3,
+        "upvoteCount": 26,
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Apple Siri, Amazon Alexa, and Google Home are the market leading voice assistants on the market and range from $70 to $110.",
+          "upvoteCount": 1337,
+          "url": "https://house-mate.com.au/question1#acceptedAnswer"
+          },
+        "suggestedAnswer": [
+          {
+            "@type": "Answer",
+            "text": "Depends on the technology already in place. I have Google everything, so I use Google Home for all voice instructions. A friend uses Alexa because they dont have any Google equipment in their home.  Apple users prefer Siri.",
+            "upvoteCount": 42,
+            "url": "https://house-mate.com.au/question1#suggestedAnswer1"
+          }, {
+            "@type": "Answer",
+            "text": "They're all the same and cost around $100 each",
+            "upvoteCount": 0,
+            "url": "https://house-mate.com.au/question1#suggestedAnswer2"
+          }
+        ]
+      }
+    },
+   	{
+   		"@context": "https://schema.org",
+   		"@type": "FAQPage",
+   		"mainEntity": [{
+   			"@type": "Question",
+   			"name": "✅ Who are House-Mate Automation?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Housemate Automation is a smart home company that operates from Melbourne Australia. They artchitect very cost effective smart home solutions enabling clients to control their entire home from one voice enabled app."
+   			}
+   		},
+
+{
+   			"@type": "Question",
+   			"name": "✅ How do I give a voice command for my lights?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Depending on the voice assistant in use the commands vary.  Hey Siri, switch off the bedroom lights is the command for Apple, whereas Alexa, turn off the bedroom lights is the command for Amazons voice assistant."
+   			}
+   		},
+
+
+{
+   			"@type": "Question",
+   			"name": "✅ Which is the best voice assistant for home automation?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "The three most popular voice assistants, namely Siri, Alexa, and Google Home can all integrate with home automation and can be used to control lighting, thermostats, irrigation, televisions, security, etc"
+   			}
+   		},
+ {
+   			"@type": "Question",
+   			"name": "✅ Do voice assistants learn your voice and improve their recognition?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Yes, voice assistants have the ability to learn your voice over time thus improving their accuracy."
+   			}
+
+   		}]
+   	}
+   ]
+
+</script>
 
 
 <body>
