--- a/index.html
+++ b/index.html
@@ -143,7 +143,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
    			}
    		]
-   	}
+   	},
+{
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Books",
+        "item": "https://house-mate.com.au/"
+      },{
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Science Fiction",
+        "item": "https://house-mate.com.au/irrigation.html"
+      }]
+    }
 
    ]
 
