--- a/index.html
+++ b/index.html
@@ -80,24 +80,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    		"@type": "QAPage",
    		"mainEntity": {
    			"@type": "Question",
-   			"name": "voice assistant",
-   			"text": "I am really interested to operate my house by voice.  What are the best voice assistants?",
+   			"name": "housemate",
+   			"text": "I am really interested to integrate devices in my home and make them inter operable? What is the best way to approach this?",
    			"answerCount": 3,
    			"upvoteCount": 26,
    			"acceptedAnswer": {
    				"@type": "Answer",
-   				"text": "Apple Siri, Amazon Alexa, and Google Home are the market leading voice assistants on the market and range from $70 to $110.",
-   				"upvoteCount": 1337,
+   				"text": "Interoperability requires a central hub or device that acts as the master controller. Check out Samsung Smarthings, Apple HomeKit, Google Home.",
+   				"upvoteCount": 5,
    				"url": "https://house-mate.com.au/question1#acceptedAnswer"
    			},
    			"suggestedAnswer": [{
    				"@type": "Answer",
-   				"text": "Depends on the technology already in place. I have Google everything, so I use Google Home for all voice instructions. A friend uses Alexa because they dont have any Google equipment in their home.  Apple users prefer Siri.",
-   				"upvoteCount": 42,
+   				"text": "There are many hubs on the market and dont forget to check out the open source hubs if you like DIY.",
+   				"upvoteCount": 4,
    				"url": "https://house-mate.com.au/question1#suggestedAnswer1"
    			}, {
    				"@type": "Answer",
-   				"text": "They're all the same and cost around $100 each",
+   				"text": "House-mate will assist your hub and smart device selection process by understanding the devices you already have and putting together a custom solution.",
    				"upvoteCount": 0,
    				"url": "https://house-mate.com.au/question1#suggestedAnswer2"
    			}]
@@ -152,11 +152,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "position": 1,
         "name": "Books",
         "item": "https://house-mate.com.au/"
-      },{
-        "@type": "ListItem",
-        "position": 2,
-        "name": "Science Fiction",
-        "item": "https://house-mate.com.au/irrigation.html"
       }]
     }
 
