--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "itemListElement": [{
         "@type": "ListItem",
         "position": 1,
-        "name": "Books",
+        "name": "Website",
         "item": "https://house-mate.com.au/"
       }]
     }
