--- a/award.html
+++ b/award.html
@@ -4,7 +4,7 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "ProfessionalService",
+      "@type": "GeneralContractor",
       "image": [
         "https://example.com/photos/1x1/photo.jpg",
         "https://example.com/photos/4x3/photo.jpg",
@@ -28,7 +28,7 @@
         },
         "author": {
           "@type": "Person",
-          "name": "Lillian Ruiz"
+          "name": "gyoza"
         }
       },
       "geo": {
