--- a/award.html
+++ b/award.html
@@ -6,13 +6,11 @@
       "@context": "https://schema.org",
       "@type": "GeneralContractor",
       "image": [
-        "https://example.com/photos/1x1/photo.jpg",
-        "https://example.com/photos/4x3/photo.jpg",
-        "https://example.com/photos/16x9/photo.jpg"
+       "https://house-mate.com.au/assets/images/twitter-image.jpg"
        ],
       "name": "House-Mate Automation",
       "address": {
-        "@type": "PostalAddress",
+        "@type": "Text",
         "streetAddress": "1/257 Auburn Road",
         "addressLocality": "Hawthorn",
         "addressRegion": "VIC",
