--- a/award.html
+++ b/award.html
@@ -4,7 +4,7 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "GeneralContractor",
+      "@type": "LocalBusiness",
       "image": [
        "https://house-mate.com.au/assets/images/twitter-image.jpg"
        ],
@@ -50,19 +50,6 @@
           ],
           "opens": "09:00",
           "closes": "17:00"
-        },
-       
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": "Saturday",
-          "opens": "09:00",
-          "closes": "13:00"
-        },
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": "Sunday",
-          "opens": "09:00",
-          "closes": "13:00"
         }
       ],
       "menu": "http://www.example.com/menu",
