--- a/award.html
+++ b/award.html
@@ -1,21 +1,23 @@
 <html>
   <head>
-    <title>House-Mate Automation</title>
+    <title>Dave's Steak House</title>
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "LocalBusiness",
+      "@type": "Restaurant",
       "image": [
-       "https://house-mate.com.au/assets/images/twitter-image.jpg"
+        "https://example.com/photos/1x1/photo.jpg",
+        "https://example.com/photos/4x3/photo.jpg",
+        "https://example.com/photos/16x9/photo.jpg"
        ],
-      "name": "House-Mate Automation",
+      "name": "Dave's Steak House",
       "address": {
-        "@type": "Text",
-        "streetAddress": "1/257 Auburn Road",
-        "addressLocality": "Hawthorn",
-        "addressRegion": "VIC",
-        "postalCode": "3182",
-        "addressCountry": "AU"
+        "@type": "PostalAddress",
+        "streetAddress": "148 W 51st St",
+        "addressLocality": "New York",
+        "addressRegion": "NY",
+        "postalCode": "10019",
+        "addressCountry": "US"
       },
       "review": {
         "@type": "Review",
@@ -26,16 +28,16 @@
         },
         "author": {
           "@type": "Person",
-          "name": "gyoza"
+          "name": "Lillian Ruiz"
         }
       },
       "geo": {
         "@type": "GeoCoordinates",
-        "latitude": -37.82914, 
-        "longitude": 145.04415
+        "latitude": 40.761293,
+        "longitude": -73.982294
       },
-      "url": "http://house-mate.com.au/",
-      "telephone": "+61390003555",
+      "url": "http://www.example.com/restaurant-locations/manhattan",
+      "telephone": "+12122459600",
       "servesCuisine": "American",
       "priceRange": "$$$",
       "openingHoursSpecification": [
@@ -43,13 +45,32 @@
           "@type": "OpeningHoursSpecification",
           "dayOfWeek": [
             "Monday",
-            "Tuesday",
-		"Wednesday",
+            "Tuesday"
+          ],
+          "opens": "11:30",
+          "closes": "22:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Wednesday",
             "Thursday",
             "Friday"
           ],
-          "opens": "09:00",
-          "closes": "17:00"
+          "opens": "11:30",
+          "closes": "23:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": "Saturday",
+          "opens": "16:00",
+          "closes": "23:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": "Sunday",
+          "opens": "16:00",
+          "closes": "22:00"
         }
       ],
       "menu": "http://www.example.com/menu",
