--- a/award.html
+++ b/award.html
@@ -5,7 +5,7 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "url": "https://www.house-mate.com.au/",
+      "url": "https://house-mate.com.au/",
       "potentialAction": {
         "@type": "SearchAction",
         "target": {
