--- a/award.html
+++ b/award.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>The title of the page</title>
+    <title>Sitelinks Searchbox</title>
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
