--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    			"upvoteCount": 26,
    			"acceptedAnswer": {
    				"@type": "Answer",
-   				"text": "Interoperability requires a central hub or device that acts as the master controller. Check out Samsung Smarthings, Apple HomeKit, Google Home.",
+   				"text": "Interoperability requires a central hub or device that acts as the master controller. We utilise Samsung Smarthings, Apple HomeKit, Google Home.",
    				"upvoteCount": 5,
    				"url": "https://house-mate.com.au/question1#acceptedAnswer"
    			},
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    				"url": "https://house-mate.com.au/question1#suggestedAnswer1"
    			}, {
    				"@type": "Answer",
-   				"text": "House-mate will assist your hub and smart device selection process by understanding the devices you already have and putting together a custom solution.",
+   				"text": "Installers will assist your hub and smart device selection process by understanding the devices you already have and putting together a custom solution.",
    				"upvoteCount": 0,
    				"url": "https://house-mate.com.au/question1#suggestedAnswer2"
    			}]
