--- a/index.html
+++ b/index.html
@@ -144,6 +144,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    			}
    		]
    	},
+
+ 
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "url": "https://house-mate.com.au/",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "https://house-mate.com.au/search?q={search_term_string}"
+        },
+        "query-input": "required name=search_term_string"
+      }
+    },
+
 {
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
