--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    			"name": "housemate",
    			"text": "I am really interested to integrate devices in my home and make them inter operable? What is the best way to approach this?",
    			"answerCount": 3,
-   			"upvoteCount": 26,
+   			"upvoteCount": 9,
    			"acceptedAnswer": {
    				"@type": "Answer",
-   				"text": "Interoperability requires a central hub or device that acts as the master controller. We utilise Samsung Smarthings, Apple HomeKit, Google Home.",
+   				"text": "Interoperability requires a central hub or device that acts as the master controller. Multiple options available from Samsung Smarthings, Apple HomeKit, Google Home.",
    				"upvoteCount": 5,
    				"url": "https://house-mate.com.au/question1#acceptedAnswer"
    			},
@@ -108,16 +108,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    		"@type": "FAQPage",
    		"mainEntity": [{
    				"@type": "Question",
-   				"name": "✅ Who are House-Mate Automation?",
+   				"name": "✅ Can I capture buttons from a remote control and have them within HomeKit?",
    				"acceptedAnswer": {
    					"@type": "Answer",
-   					"text": "Housemate Automation is a smart home company that operates from Melbourne Australia. They artchitect very cost effective smart home solutions enabling clients to control their entire home from one voice enabled app."
+   					"text": "Yes. Any function on the remote control (or sequence of button presses) can be harnessed and most big brands (post 2015 models) are supported, namely Sony, LG, Samsung TVs. This extends to most infra red remote controls."
    				}
    			},
 
    			{
    				"@type": "Question",
-   				"name": "✅ How do I give a voice command for my lights?",
+   				"name": "✅ How do I issue a voice command for lights?",
    				"acceptedAnswer": {
    					"@type": "Answer",
    					"text": "Depending on the voice assistant in use the commands vary.  Hey Siri, switch off the bedroom lights is the command for Apple, whereas Alexa, turn off the bedroom lights is the command for Amazons voice assistant."
@@ -130,7 +130,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    				"name": "✅ Which is the best voice assistant for home automation?",
    				"acceptedAnswer": {
    					"@type": "Answer",
-   					"text": "The three most popular voice assistants, namely Siri, Alexa, and Google Home can all integrate with home automation and can be used to control lighting, thermostats, irrigation, televisions, security, etc"
+   					"text": "The three most popular voice assistants are Apple Siri, Amazon Alexa, and Google Home. All integrate with home automation and can be used to control lighting, thermostats, irrigation, televisions, security, etc"
    				}
    			},
    			{
@@ -168,6 +168,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "position": 1,
         "name": "Website",
         "item": "https://house-mate.com.au/"
+      },
+{
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Lights",
+        "item": "https://house-mate.com.au/lighting.html"
       }]
     }
 
