--- a/markup_localbusiness.html
+++ b/markup_localbusiness.html
@@ -31,6 +31,11 @@
         "latitude": -37.82889,
         "longitude": 145.04399
       },
+	"sameAs" : [
+                    "https://facebook.com/HousemateAutomation",
+                    "https://twitter.com/HousemateAU",
+                    "https://instagram.com/Housemateautomation"
+	],
       "url": "https://house-mate.com.au/",
       "telephone": "+61390003555",
       "openingHoursSpecification": [
