--- a/markup_localbusiness.html
+++ b/markup_localbusiness.html
@@ -39,7 +39,12 @@
       "url": "https://house-mate.com.au/",
       "telephone": "+61390003555",
 	"email": "info@house-mate.com.au,
-	"keywords": "home automation, smart home, smart blinds, smart irrigation"
+	"keywords": [
+"home automation", 
+"smart home", 
+"smart blinds", 
+"smart irrigation"
+],
       "openingHoursSpecification": [
         {
           "@type": "OpeningHoursSpecification",
