--- a/markup_localbusiness.html
+++ b/markup_localbusiness.html
@@ -38,8 +38,8 @@
 	],
       "url": "https://house-mate.com.au/",
       "telephone": "+61390003555",
-	"email": "info@house-mate.com.au,
-	"keywords": "home automation", 
+	"email": "info@house-mate.com.au",
+	"keywords": "home automation, smart home", 
       "openingHoursSpecification": [
         {
           "@type": "OpeningHoursSpecification",
