--- a/markup_localbusiness.html
+++ b/markup_localbusiness.html
@@ -39,7 +39,7 @@
       "url": "https://house-mate.com.au/",
       "telephone": "+61390003555",
 	"email": "info@house-mate.com.au",
-	"keywords": "home automation, smart home", 
+	"keywords": "home automation, smart home, smart home melbourne, greenstar, CBUS, Legrand, Apple HomeKit, smart power points, smart blinds, smart pool and spa, smart alarm system, one app to control your home", 
       "openingHoursSpecification": [
         {
           "@type": "OpeningHoursSpecification",
