--- a/markup_localbusiness.html
+++ b/markup_localbusiness.html
@@ -11,7 +11,7 @@
         "streetAddress": "1/257 Auburn Road",
         "addressLocality": "Hawthorn East",
         "addressRegion": "Victoria",
-        "postalCode": "31",
+        "postalCode": "3122",
         "addressCountry": "AU"
       },
       "review": {
@@ -20,10 +20,6 @@
           "@type": "Rating",
           "ratingValue": "5",
           "bestRating": "5"
-        },
-        "author": {
-          "@type": "Person",
-          "name": "Jamie B"
         }
       },
       "geo": {
@@ -39,7 +35,7 @@
       "url": "https://house-mate.com.au/",
       "telephone": "+61390003555",
 	"email": "info@house-mate.com.au",
-	"keywords": "home automation, smart home, smart home melbourne, greenstar, CBUS, Legrand, Apple HomeKit, smart power points, smart blinds, smart pool and spa, smart alarm system, one app to control your home", 
+	"keywords": "home automation, smart home, smart home melbourne, greenstar, CBUS, Legrand, Apple HomeKit, smart power points, smart blinds, smart pool and spa, smart alarm system, one app to control your home, best smart home", 
       "openingHoursSpecification": [
         {
           "@type": "OpeningHoursSpecification",
