--- a/markup_localbusiness.html
+++ b/markup_localbusiness.html
@@ -33,6 +33,7 @@
                     "https://instagram.com/Housemateautomation"
 	],
       "url": "https://house-mate.com.au/",
+"slogan": "For whole of home automation, House-Mate",
 	"logo": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png",
       "telephone": "+61390003555",
 	"email": "info@house-mate.com.au",
