--- a/markup_localbusiness.html
+++ b/markup_localbusiness.html
@@ -14,12 +14,16 @@
         "postalCode": "3122",
         "addressCountry": "AU"
       },
-      "review": {
+       "review": {
         "@type": "Review",
         "reviewRating": {
           "@type": "Rating",
-          "ratingValue": "5",
+          "ratingValue": "4",
           "bestRating": "5"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Jamie Kuperholz"
         }
       },
       "geo": {
