--- a/contact.html
+++ b/contact.html
@@ -63,10 +63,97 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  
-  
+   
   
 </head>
+<script type="application/ld+json">
+
+   [    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "House-Mate Automation",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "1/257 Auburn Road",
+        "addressLocality": "Hawthorn East",
+        "addressRegion": "Victoria",
+        "postalCode": "3122",
+        "addressCountry": "AU"
+      },
+       "review": {
+        "@type": "Review",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "4",
+          "bestRating": "5"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Jamie Kuperholz"
+        }
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": -37.82889,
+        "longitude": 145.04399
+      },
+	"sameAs" : [
+                    "https://facebook.com/HousemateAutomation",
+                    "https://twitter.com/HousemateAU",
+                    "https://instagram.com/Housemateautomation"
+	],
+      "url": "https://house-mate.com.au/",
+"slogan": "For whole of home automation, House-Mate",
+	"logo": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png",
+      "telephone": "+61390003555",
+	"email": "info@house-mate.com.au",
+	"keywords": "home automation, smart home, smart home melbourne, greenstar, CBUS, Legrand, Apple HomeKit, smart power points, smart blinds, smart pool and spa, smart alarm system, one app to control your home, best smart home", 
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+		"Wednesday",
+            "Thursday",
+            "Friday"
+          ],
+          "opens": "09:00",
+          "closes": "17:00"
+        }
+      ]
+    },
+ 
+   
+
+{
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Website",
+        "item": "https://house-mate.com.au/"
+      },
+{
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Lights",
+        "item": "https://house-mate.com.au/lighting.html"
+      },
+{
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Contact",
+        "item": "https://house-mate.com.au/contact.html"
+      }]
+    }
+
+   ]
+
+</script>
+
+
 <body>
 
 <!-- Google Tag Manager (noscript) -->
