--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>House-Mate Automation</title>
-
-   
-
-  </head>
-  <body>
-  </body>
+   <head>
+      <title>House-Mate Redirect</title>
+      <meta http-equiv = "refresh" content = "3; url = https://house-mate.com.au/contact.html" />
+   </head>
+   <body>
+      <p>Redirecting to another URL</p>
+   </body>
 </html>
