--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html>
    <head>
       <title>House-Mate Redirect</title>
-      <meta http-equiv = "refresh" content = "3; url = https://house-mate.com.au/contact.html" />
+      <meta http-equiv = "refresh" content = "1; url = https://house-mate.com.au/contact.html" />
    </head>
    <body>
-      <p>Redirecting to another URL</p>
+      <p>Redirecting to updated URL..</p>
    </body>
 </html>
