--- a/index.html
+++ b/index.html
@@ -215,6 +215,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       }
     },
 
+ {
+      "@context": "https://schema.org",
+"@type": "Organization",
+"legalName": "House-Mate Automation",	
+"email": "info@house-mate.com.au",
+"telephone": "+61390003555",	
+"sameAs": "https://instagram.com/housemateautomation",
+ "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "1/257 Auburn Road",
+        "addressLocality": "Hawthorn East",
+        "addressRegion": "Victoria",
+        "postalCode": "3122",
+        "addressCountry": "AU"
+}
+},
+
+
 {
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
