--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@context": "https://schema.org",
       "@type": "WebSite",
       "url": "https://house-mate.com.au/",
+"description": "Control lighting, alarm system & security cameras, blinds, irrigation, thermostats, garage door & gates, pool & spa, AV equipment and more... from anywhere for optimal convenience, security, and peace of mind. Contact House-Mate for the best home automation solutions.",
       "potentialAction": {
         "@type": "SearchAction",
         "target": {
