--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 "legalName": "House-Mate Automation",	
 "email": "info@house-mate.com.au",
 "telephone": "+61390003555",	
+"url": "https://house-mate.com.au",
 "sameAs": "https://instagram.com/housemateautomation",
  "address": {
         "@type": "PostalAddress",
