--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 "email": "info@house-mate.com.au",
 "telephone": "+61390003555",	
 "url": "https://house-mate.com.au",
+"logo": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png",
 "sameAs": "https://instagram.com/housemateautomation",
  "address": {
         "@type": "PostalAddress",
