--- a/index.html
+++ b/index.html
@@ -215,15 +215,34 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
  		"url": "https://house-mate.com.au/",
  		"name": "House-Mate Automation",
  		"inLanguage": "en-US",
- 		"potentialAction": {
- 			"@type": "SearchAction",
- 			"target": {
- 				"@type": "EntryPoint",
- 				"urlTemplate": "https://house-mate.com.au/search?q={search_term_string}"
+ 		"publisher": {
+ 			"@id": "https://www.house-mate.com.au/#organization",
+ 			"logo": {
+ 				"@type": "ImageObject",
+ 				"inLanguage": "en-US",
+ 				"@id": "https://house-mate.com.au/#/schema/logo/image/",
+ 				"url": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png",
+ 				"contentUrl": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png",
+ 				"width": 180,
+ 				"height": 180,
+ 				"caption": "House-Mate Automation"
  			},
- 			"query-input": "required name=search_term_string"
+ 			"image": {
+ 				"@id": "https://house-mate.com.au/#/schema/logo/image/"
+ 			}
  		}
+ 	},
+
+ 	"potentialAction": {
+ 		"@type": "SearchAction",
+ 		"target": {
+ 			"@type": "EntryPoint",
+ 			"urlTemplate": "https://house-mate.com.au/search?q={search_term_string}"
+ 		},
+ 		"query-input": "required name=search_term_string"
  	}
+
+
  },
 
  {
