--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
  				"@type": "ImageObject",
  				"inLanguage": "en-US",
  				"@id": "https://house-mate.com.au/#/schema/logo/image/",
- 				"url": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png",
- 				"contentUrl": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png",
+ 				"url": "https://house-mate.com.au/assets/images/twitter-image.jpg",
+ 				"contentUrl": "https://house-mate.com.au/assets/images/twitter-image.jpg",
  				"width": 180,
  				"height": 180,
  				"caption": "House-Mate Automation"
