--- a/index.html
+++ b/index.html
@@ -216,7 +216,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
  		"name": "House-Mate Automation",
  		"inLanguage": "en-US",
  		"publisher": {
- 			"@id": "https://www.house-mate.com.au/#organization"}
+ 			"@id": "https://www.house-mate.com.au/#organization",
+ 			"logo": {
+ 				"@type": "ImageObject",
+ 				"inLanguage": "en-US",
+ 				"@id": "https://house-mate.com.au/#/schema/logo/image/",
+ 				"url": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png",
+ 				"contentUrl": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png",
+ 				"width": 180,
+ 				"height": 180,
+ 				"caption": "House-Mate Automation"
+ 			},
+ 			"image": {
+ 				"@id": "https://house-mate.com.au/#/schema/logo/image/"
+ 			}
  		}
  	},
 
