--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     		"url": "https://house-mate.com.au/",
     		"name": "House-Mate Automation",
     		"inLanguage": "en-US",
+"sameAs":["https://www.twitter.com/HousemateAU/","https://www.instagram.com/housemateautomation/","https://www.facebook.com/HousemateAutomation/"],
     		"potentialAction": {
     			"@type": "SearchAction",
     			"target": {
