--- a/indexc2.html
+++ b/indexc2.html
@@ -224,7 +224,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			"@id": "https://house-mate.com.au/#primaryimage",
 			"@type": "ImageObject",
 			"inLanguage": "en-US",
-			"url": "https://house-mate.com.au/assets/images/appletouch-icon.jpg"
+			"url": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png"
 		},
 		"isPartOf": {
 			"@type": "WebSite",
