--- a/important_stuff.html
+++ b/important_stuff.html
@@ -7,7 +7,7 @@
 <meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta property="og:type" content="image/webp">
 <meta property="og:image" content="https://house-mate.com.au/assets/images/webp/og-image-facebook.webp">
-<meta property="og:url" content="https://house-mate.com.au/faq.html" />
+<meta property="og:url" content="https://house-mate.com.au/important_stuff.html" />
 
 <meta name="twitter:title" content="House-mate Smart Home Automation" />
 <meta name="twitter:site" content="@HousemateAU" />
