--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "addressCountry": "AU"
 }
 },
+{
+      "@context": "https://schema.org",
+      "@type": "SiteNavigationElement",
+	"name": "Homepage",
+	"url": "https://house-mate.com.au/"
+},
 
 
 {
