--- a/index.html
+++ b/index.html
@@ -249,7 +249,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@context": "https://schema.org",
       "@type": "SiteNavigationElement",
 	"name": "Homepage",
-	"url": "https://house-mate.com.au/"
+	"url": "https://house-mate.com.au/",
+
+	"itemListElement": [{
+		"@type": "ListItem",
+		"position": 1,
+		"name": "Irrigation",
+		"item": "https://house-mate.com.au/irrigation.html"
+	}, {
+		"@type": "ListItem",
+		"position": 2,
+		"name": "Lighting",
+		"item": "https://house-mate.com.au/lighting.html"
+	}]
+}
 },
 
 
