--- a/index.html
+++ b/index.html
@@ -265,8 +265,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 {
         "@type": "ListItem",
         "position": 2,
-        "name": "Lights",
+        "name": "Lighting",
         "item": "https://house-mate.com.au/lighting.html"
+      },
+{
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Security",
+        "item": "https://house-mate.com.au/security.html"
+      },
+{
+        "@type": "ListItem",
+        "position": 4,
+        "name": "Irrigation",
+        "item": "https://house-mate.com.au/irrigation.html"
       }]
     }
 
