--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <link rel="canonical" href="https://house-mate.com.au/" />
+<meta name="google-site-verification" content="wG7qyQe7GhdKGtexNOQPhJH6wY1j0_FxVyzo2byP6No" />
 <meta property="og:title" content="House-mate Smart Home Automation | Homekit Australia">
 <meta property="og:description" content="Affordable and centralised home automation using Apple HomeKit. Convenience, security, and peace of mind with a smart home by House-mate.">
 <meta property="og:type" content="image/webp">
