--- a/pool.html
+++ b/pool.html
@@ -52,7 +52,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="description" content="Hey Siri turn on the spa jets. Apple HomeKit compatible pool and spa solutions. Smart pool control and automation via your phone from anywhere. ">
   
   
-  <title>House-mate Pool and Spa Automation</title>
+  <title>Smart Pool and Spa - House-Mate Automation</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
