--- a/remote.html
+++ b/remote.html
@@ -52,7 +52,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="description" content="Capture your remote control buttons and operate them using Apple HomeKit or Siri. Include remote control functions in automations">
   
   
-  <title>House-mate Remote Control Automation</title>
+  <title>Smart Remote Control - House-Mate Automation</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
