--- a/index.html
+++ b/index.html
@@ -383,17 +383,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h3 class="mbr-section-subtitle pb-3 mbr-fonts-style display-5">Start to change the way you interact with your connected home today with many different home products to choose from.</h3>
  <picture>
 <source type="image/webp" srcset="assets/images/webp/works with apple.webp">
-<img src="assets/images/works with apple.png" alt="House-Mate" title="Choose the interface to your home">
-
+<img src="assets/images/works with apple.png" alt="House-Mate" title="Apple HomeKit interface">
 </picture>
+
 <picture>
 <source type="image/webp" srcset="assets/images/webp/works with google.webp">
-<img src="assets/images/works with google.png" alt="House-Mate" title="Choose the interface to your home">
-
+<img src="assets/images/works with google.png" alt="House-Mate" title="Google Home interface">
 </picture>
+
 <picture>
 <source type="image/webp" srcset="assets/images/webp/works with alexa.webp">
-<img src="assets/images/works with alexa.png" alt="House-Mate" title="Choose the interface to your home">
+<img src="assets/images/works with alexa.png" alt="House-Mate" title="Amazon Alexa interface">
 
 </picture>
 
