--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="mbr-figure m-auto" style="width: 33%;">
                 <picture>
 <source type="image/webp" srcset="assets/images/webp/front2-450x462.webp">
-<img src="assets/images/front2-450x462.gif" alt="House-mate" title="Full home control via one voice enabled app!">
+<img src="assets/images/front2-450x462.jpg" alt="House-mate" title="Full home control via one voice enabled app!">
 
 </picture>
             </div>
