--- a/remote.html
+++ b/remote.html
@@ -130,7 +130,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-               <h1 style="font-size:6vw"><b>Smart Remote Control</b></h1> 
+               <h1 style="font-size:6vw"><b>Remote Controls</b></h1> 
                 <p class="mbr-text pb-2 mbr-fonts-style display-4">Learn remote controls using HomeKit™ and Siri™</p>
                 
             </div>
