--- a/remote.html
+++ b/remote.html
@@ -131,7 +131,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
                <h1 style="font-size:6vw"><b>Remote Controls</b></h1> 
-                <p class="mbr-text pb-2 mbr-fonts-style display-4">Learn remote controls using HomeKit™ and Siri™</p>
+                <p class="mbr-text pb-2 mbr-fonts-style display-4">Learn buttons from your remote controls and use them via HomeKit™ and Siri™</p>
                 
             </div>
         </div>
