--- a/pros-and-cons-of-smart-lighting.html
+++ b/pros-and-cons-of-smart-lighting.html
@@ -165,7 +165,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
 
-<h1 style="font-size:6vw"><b>Smart Lighting</b></h1> 
+<h1 style="font-size:6vw"><b>Smart Lighting Pros and Cons</b></h1> 
                 <p class="mbr-text pb-2 mbr-fonts-style display-4">The advantages and disadvantages of smart lighting</p>
                 
                 
