Update index - ux.html

--- a/index - ux.html
+++ b/index - ux.html
@@ -327,7 +327,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         House-Mate<br>Automation</a></span>
 
 <a class="navbar-caption text-white display-4" href="tel:03 9000 3555">Phone (03) 9000 3555</a>
-><a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">Email Us</a>
+><a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">info@house-mate.com.au</a>
 
 
                     
