--- a/indexux1.html
+++ b/indexux1.html
@@ -323,12 +323,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </picture>
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
-                        House-Mate<br>Automation</a></span>
+             
 
 <a class="navbar-caption text-white display-4" href="tel:03 9000 3555">Phone (03) 9000 3555</a>
-><a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">info@house-mate.com.au</a>
-
+>>><a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">info@house-mate.com.au</a>
 
 
 
