--- a/indexux1.html
+++ b/indexux1.html
@@ -325,8 +325,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </span>
              
 
-<a class="navbar-caption text-white display-4" href="tel:03 9000 3555">Phone (03) 9000 3555</a>
->>><a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">info@house-mate.com.au</a>
+<a class="navbar-caption text-white display-4" href="tel:03 9000 3555">Ph: 03 9000 3555</a>
+>><a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">info@house-mate.com.au</a>
 
 
 
