--- a/indexux1.html
+++ b/indexux1.html
@@ -325,16 +325,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </span>
              
 
-<a class="navbar-caption text-white display-4" href="tel:03 9000 3555">Ph: 03 9000 3555</a>
->><a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">info@house-mate.com.au</a>
+<a class="navbar-caption text-white display-4" href="tel:03 9000 3555">Phone</a>
+>><a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">Email</a>
+>>
 
-
-
-
-
-
-
-
+  <a class="iconfont-wrapper bg-facebook m-2 " target="_blank" rel="noopener" href="https://www.facebook.com/HousemateAutomation/">
+                            <span class="socicon-facebook socicon"></span>
+                        </a>
+                        <a class="iconfont-wrapper bg-twitter m-2" href="https://twitter.com/HousemateAU/" target="_blank" rel="noopener">
+                            <span class="socicon-twitter socicon"></span>
+                        </a>
+                        <a class="iconfont-wrapper bg-instagram m-2" href="https://www.instagram.com/housemateautomation/" target="_blank" rel="noopener">
+                            <span class="socicon-instagram socicon"></span>
+                        </a>
                         
                   </div>
             </div>
