--- a/indexux2.html
+++ b/indexux2.html
@@ -335,7 +335,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </picture>
                     </a>
 
-<a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">Email Us</a>
+<a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">E</a>
 >>
 
 
@@ -347,7 +347,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </picture>
                     </a>
-<a class="navbar-caption text-white display-4" href="tel:03 9000 3555">Phone Us</a>
+<a class="navbar-caption text-white display-4" href="tel:03 9000 3555">P</a>
 
  
                         
