--- a/indexux2.html
+++ b/indexux2.html
@@ -324,8 +324,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </a>
                 </span>
              
- <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
-                        House-Mate<br>Automation</a></span>
+
 
                     <a href="mailto:info@house-mate.com.au">
                         <picture>
@@ -335,7 +334,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </picture>
                     </a>
 
-<a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">E</a>
+<a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">Email</a>
 >>
 
 
@@ -347,7 +346,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </picture>
                     </a>
-<a class="navbar-caption text-white display-4" href="tel:03 9000 3555">P</a>
+<a class="navbar-caption text-white display-4" href="tel:03 9000 3555">Phone</a>
 
  
                         
