--- a/indexux2.html
+++ b/indexux2.html
@@ -324,28 +324,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </a>
                 </span>
              
-
-
-                    <a href="mailto:info@house-mate.com.au">
-                        <picture>
-
-<img src="assets/images/contact-email-transparent.png" alt="Email Us" title="" style="height: 2.6rem;">
-
-</picture>
-                    </a>
+<a href="mailto:info@house-mate.com.au">
+<picture><img src="assets/images/contact-email-transparent.png" alt="Email Us" title="" style="height: 2.4rem;"></picture></a>
 
 <a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">Email</a>
->>
 
 
+<a href="tel:03 9000 3555">
+<picture><img src="assets/images/contact-phone-transparent.png" alt="Phone" title="" style="height: 2.4rem;"></picture></a>
 
- <a href="mailto:info@house-mate.com.au">
-                        <picture>
-
-<img src="assets/images/contact-phone-transparent.png" alt="Phone" title="" style="height: 2.8rem;">
-
-</picture>
-                    </a>
 <a class="navbar-caption text-white display-4" href="tel:03 9000 3555">Phone</a>
 
  
