--- a/indexux2.html
+++ b/indexux2.html
@@ -325,7 +325,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </span>
              
 <a href="mailto:info@house-mate.com.au">
-<picture><img src="assets/images/contact-email-transparent.png" alt="Email Us" title="" style="height: 2.0rem;"></picture></a>
+<picture><img src="assets/images/contact-email-transparent.png" alt="Email" title="" style="height: 2.0rem;"></picture></a>
 
 <a class="navbar-caption text-white display-4" href="mailto:info@house-mate.com.au">Email</a>
 
