--- a/security.html
+++ b/security.html
@@ -205,7 +205,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Door and window sensors</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Secure the perimeter of your home automatically when you go to bed. Door and window sensors are a very effective way to arm the home and can be hard-wired or run on battery.<br><br>We work with and recommend <a href="https://bpointcomms.com.au" target="_blank">BPoint Security</a>&nbsp;for alarm system installations and monitoring.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Secure the perimeter of your home automatically when you go to bed. Door and window sensors are a very effective way to arm the home and can be hard-wired or run on battery.</p>
                     </div>
                 </div>
             </div>
